hanu-reference/service-mesh/servicemesh-kiali-resource/Ingress_kiali.yaml
---
# Source: servicemesh-kiali-resource/templates/kiali-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kiali
  namespace: istio-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: dashboard-ahnsk.taco-cat.xyz
      http:
        paths:
        - backend:
            service:
              name: kiali
              port:
                number: 20001
          path: /kiali
          pathType: ImplementationSpecific
